5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1585_1446.log
== TEST (2019-03-21 23:48:37) 
-- CODE:
print(round(5.2567, 1))
-- OUTPUT:
5.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:48:50) 
-- CODE:
print(round(5.2567, 2))
-- OUTPUT:
5.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:56:52) 
-- CODE:
x = float(input("quantidade de litros: "))
y = float(input("doar 2/3 * x: "))

total = x - y
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:57:46) 
-- CODE:
x = float(input("quantidade de litros: "))
y = float(input("doar 2/3 * x: "))

total = x - y
print(total)
-- EXECUTION TIME:
0.192668
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1446/main.py", line 2, in <module>
    y = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:57:46) 
-- CODE:
x = float(input("quantidade de litros: "))
y = float(input("doar 2/3 * x: "))

total = x - y
print(total)
-- EXECUTION TIME:
0.192127
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1446/main.py", line 2, in <module>
    y = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:58:50) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(total)
-- OUTPUT:
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:59:06) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(total)
-- EXECUTION TIME:
0.225593
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333333333333334
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.666666666666668
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:59:11) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(total)
-- EXECUTION TIME:
0.0970359
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333333333333334
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.666666666666668
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:07:00) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = y
print(total)
-- OUTPUT:
4.666666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:07:11) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = y
print(total)
-- EXECUTION TIME:
0.127498
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
4.666666666666666
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
13.333333333333332
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:07:39) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(total)
-- OUTPUT:
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:07:50) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(total)
-- EXECUTION TIME:
0.164982
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333333333333334
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.666666666666668
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:07:56) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(total)
-- EXECUTION TIME:
0.178303
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333333333333334
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.666666666666668
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:09:17) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x
print(round(x, 3))
total = x - y
print(total)
-- EXECUTION TIME:
0.275324
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
7.0
2.333333333333334
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
20.0
6.666666666666668
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
15.0
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:09:20) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x
print(round(x, 3))
total = x - y
print(total)
-- OUTPUT:
7.0
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:10:09) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

print(round(x, 3))

total = x - y
print(total)
-- EXECUTION TIME:
0.197545
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
7.0
2.333333333333334
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
20.0
6.666666666666668
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
15.0
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:10:31) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

print(round(y, 3))

total = x - y
print(total)
-- EXECUTION TIME:
0.18022
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
4.667
2.333333333333334
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
13.333
6.666666666666668
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
10.0
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:10:34) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

print(round(y, 3))

total = x - y
print(total)
-- OUTPUT:
4.667
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:11:21) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

r = print(round(y, 3))

total = r
print(total)
-- EXECUTION TIME:
0.12685
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
4.667
None
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
13.333
None
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
10.0
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:11:23) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

r = print(round(y, 3))

total = r
print(total)
-- OUTPUT:
4.667
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:11:49) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

r = print(round(y, 3))

total = y - x
print(total)
-- OUTPUT:
4.667
-2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:11:53) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

r = print(round(y, 3))

total = y - x
print(total)
-- OUTPUT:
4.667
-2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:12:16) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

r = print(round(y, 3))

total = x - y
print(total)
-- OUTPUT:
4.667
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:12:23) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

r = print(round(y, 3))

total = x - y
print(total)
-- EXECUTION TIME:
0.122906
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
4.667
2.333333333333334
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
13.333
6.666666666666668
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
10.0
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:12:34) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

r = print(round(y, 3))

total = x - r
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = x - r
TypeError: unsupported operand type(s) for -: 'float' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:13:59) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(total)
-- OUTPUT:
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:14:55) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
r = print(input(total, 3))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r = print(input(total, 3))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:15:26) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
r = print(input(total, 3))
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r = print(input(total, 3))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:15:57) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
r = print(input(total, 3))
print(r)
-- EXECUTION TIME:
0.148959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1446/main.py", line 5, in <module>
    r = print(input(total, 3))
TypeError: input expected at most 1 arguments, got 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:16:00) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
r = print(input(total, 3))
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r = print(input(total, 3))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:16:28) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
r = print(input(total, 3))
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r = print(input(total, 3))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:16:45) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(r)
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:17:04) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(total)
-- OUTPUT:
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:17:24) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(total)
-- OUTPUT:
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:18:17) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(round(total, 3))
print(total)
-- OUTPUT:
2.333
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:18:39) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(round(total, 3))

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:18:47) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(round(total, 3))

-- EXECUTION TIME:
0.154302
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:57:01) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(round(total, 3))

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:57:12) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * 

total = x - y
print(round(total, 3))

-- ERROR:
File "XXXX", line 2
    y = 2/3 * 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:57:18) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 

total = x - y
print(round(total, 3))

-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:57:40) 
-- CODE:
x = float(input("quantidade de litros: "))
y = 2/3 * x

total = x - y
print(round(total, 3))

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
